# mcap-foxglove-video-extract

./: AGENTS.md  Cargo.toml  Cross.toml  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish.yml
src/: cdr.rs  cli.rs  main.rs
